; ModuleID = '/home/carl/AnghaBench/libuv/src/extr_inet.c_inet_pton4.c'
source_filename = "/home/carl/AnghaBench/libuv/src/extr_inet.c_inet_pton4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inet_pton4.digits = internal constant [11 x i8] c"0123456789\00", align 1
@UV_EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @inet_pton4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inet_pton4(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [4 x i8], align 1
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %13 = getelementptr inbounds [4 x i8], [4 x i8]* %9, i64 0, i64 0
  store i8* %13, i8** %10, align 8
  store i8 0, i8* %13, align 1
  br label %14

14:                                               ; preds = %80, %2
  %15 = load i8*, i8** %4, align 8
  %16 = getelementptr inbounds i8, i8* %15, i32 1
  store i8* %16, i8** %4, align 8
  %17 = load i8, i8* %15, align 1
  %18 = sext i8 %17 to i32
  store i32 %18, i32* %8, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %81

20:                                               ; preds = %14
  %21 = load i32, i32* %8, align 4
  %22 = call i8* @strchr(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @inet_pton4.digits, i64 0, i64 0), i32 %21)
  store i8* %22, i8** %11, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %63

24:                                               ; preds = %20
  %25 = load i8*, i8** %10, align 8
  %26 = load i8, i8* %25, align 1
  %27 = zext i8 %26 to i32
  %28 = mul nsw i32 %27, 10
  %29 = sext i32 %28 to i64
  %30 = load i8*, i8** %11, align 8
  %31 = ptrtoint i8* %30 to i64
  %32 = sub i64 %31, ptrtoint ([11 x i8]* @inet_pton4.digits to i64)
  %33 = add nsw i64 %29, %32
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* %12, align 4
  %35 = load i32, i32* %6, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %44

37:                                               ; preds = %24
  %38 = load i8*, i8** %10, align 8
  %39 = load i8, i8* %38, align 1
  %40 = zext i8 %39 to i32
  %41 = icmp eq i32 %40, 0
  br i1 %41, label %42, label %44

42:                                               ; preds = %37
  %43 = load i32, i32* @UV_EINVAL, align 4
  store i32 %43, i32* %3, align 4
  br label %90

44:                                               ; preds = %37, %24
  %45 = load i32, i32* %12, align 4
  %46 = icmp ugt i32 %45, 255
  br i1 %46, label %47, label %49

47:                                               ; preds = %44
  %48 = load i32, i32* @UV_EINVAL, align 4
  store i32 %48, i32* %3, align 4
  br label %90

49:                                               ; preds = %44
  %50 = load i32, i32* %12, align 4
  %51 = trunc i32 %50 to i8
  %52 = load i8*, i8** %10, align 8
  store i8 %51, i8* %52, align 1
  %53 = load i32, i32* %6, align 4
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %62, label %55

55:                                               ; preds = %49
  %56 = load i32, i32* %7, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* %7, align 4
  %58 = icmp sgt i32 %57, 4
  br i1 %58, label %59, label %61

59:                                               ; preds = %55
  %60 = load i32, i32* @UV_EINVAL, align 4
  store i32 %60, i32* %3, align 4
  br label %90

61:                                               ; preds = %55
  store i32 1, i32* %6, align 4
  br label %62

62:                                               ; preds = %61, %49
  br label %80

63:                                               ; preds = %20
  %64 = load i32, i32* %8, align 4
  %65 = icmp eq i32 %64, 46
  br i1 %65, label %66, label %77

66:                                               ; preds = %63
  %67 = load i32, i32* %6, align 4
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %69, label %77

69:                                               ; preds = %66
  %70 = load i32, i32* %7, align 4
  %71 = icmp eq i32 %70, 4
  br i1 %71, label %72, label %74

72:                                               ; preds = %69
  %73 = load i32, i32* @UV_EINVAL, align 4
  store i32 %73, i32* %3, align 4
  br label %90

74:                                               ; preds = %69
  %75 = load i8*, i8** %10, align 8
  %76 = getelementptr inbounds i8, i8* %75, i32 1
  store i8* %76, i8** %10, align 8
  store i8 0, i8* %76, align 1
  store i32 0, i32* %6, align 4
  br label %79

77:                                               ; preds = %66, %63
  %78 = load i32, i32* @UV_EINVAL, align 4
  store i32 %78, i32* %3, align 4
  br label %90

79:                                               ; preds = %74
  br label %80

80:                                               ; preds = %79, %62
  br label %14

81:                                               ; preds = %14
  %82 = load i32, i32* %7, align 4
  %83 = icmp slt i32 %82, 4
  br i1 %83, label %84, label %86

84:                                               ; preds = %81
  %85 = load i32, i32* @UV_EINVAL, align 4
  store i32 %85, i32* %3, align 4
  br label %90

86:                                               ; preds = %81
  %87 = load i8*, i8** %5, align 8
  %88 = getelementptr inbounds [4 x i8], [4 x i8]* %9, i64 0, i64 0
  %89 = call i32 @memcpy(i8* %87, i8* %88, i32 4)
  store i32 0, i32* %3, align 4
  br label %90

90:                                               ; preds = %86, %84, %77, %72, %59, %47, %42
  %91 = load i32, i32* %3, align 4
  ret i32 %91
}

declare dso_local i8* @strchr(i8*, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
